# crane

./: .gitignore  CONTEXT.md  Cargo.toml  DEV_NOTE.md  DEV_NOTE_VM.md  Dockerfile.rocky.vps  Dockerfile.vps  PORTS.md  README.md  SPEC.md  bashrc_setup.md  build-windows.sh  demo-deploy.sh  devsetup.sh  docker-compose.dev.yml  docker-compose.rocky.dev.yml  docker-dev.sh  release.sh  release.toml  setup-docker-rocky.sh  setup-docker.sh  setup-minio.sh  setup-ssh.sh  skills-lock.json  ssh-setup.sh  test_deploy.sh
.agents/rules/: project.md
.github/workflows/: release.yml
demo/: .craneignore  before-deploy.sh  build_windows.sh  crane.minimal.rocky.toml  crane.minimal.toml  crane.single.toml  crane.toml  create-db.sh  delete-db.sh  go.mod  go.sum  insert-db.sh  main.go  select-db.sh  table-db.sh
docs/: pgbasebackup.md
docs/knowledges/: patroni_restore.md  pg_log_statement.md  pg_log_statement_2.md  pg_restore_pitr.md  ubuntu_firewall.md  ubuntu_rhel_diff.md
docs/post_mortem/: crane deploy stuck at polling patroni health very long.md  long_wait_at_polling_pg_cluster_health.md
plans/: traefik_internal.md
plans/sudo_changes/: impl.md  tasks.md
playbooks/: fix_patroni_stuck_at_creating_replica.md
src/: config.rs  lib.rs  main.rs  ssh.rs
src/cloudflare_unit/: dns.rs  dns_example.rs  entity.rs  mod.rs  setup.rs
src/commands/: deploy.rs  logs.rs  mod.rs  mvptest.rs  postgres.rs  postgres_backup.rs  postgres_backup_list.rs  postgres_demote.rs  postgres_logs.rs  postgres_promote.rs  postgres_reset.rs  status.rs  (+3 more)
tests/: README.md  postgres_backup.rs  traefik.rs
(+109 files in other folders)
