[package]
name = "crane"
version = "0.4.7"
edition = "2024"
description = "CLI lightweight deployment tool"
license = "MIT"
repository = "https://github.com/dreamoutbox/crane"

[dependencies]
anyhow = "1.0.102"
clap = "4.6.1"
thiserror = "2.0.18"
chrono = "0.4.44"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rust-s3 = { version = "0.37.2", default-features = false, features = [
    "blocking",
    "sync-rustls-tls",
] }
tokio = { version = "1", default-features = false, features = ["full"] }
reqwest = { version = "0.13.4", features = ["json", "multipart", "query"] }
serde_json = "1.0.150"

[profile.release]
debug = true
